--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "compat-db",
   "version": "0.0.0",
-  "description": "A central and scalable browser API compatability database",
-  "main": "index.js",
+  "description": "Lint browser compatibility of API used",
+  "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amilajack/compat-db.git"
+  },
   "scripts": {
     "test": "wdio index.js",
     "lint": "eslint --cache --ignore-path .gitignore --format=node_modules/eslint-formatter-pretty .",
@@ -13,22 +17,30 @@
     "compat",
     "database"
   ],
-  "contributors": [
-    "Amila Welihinda <amilajack@gmail.com> (http://amilajack.com)",
-    "Andrew Jong"
-  ],
+  "author": "Amila Welihinda",
   "license": "MIT",
-  "dependencies": {
-    "mocha": "^3.2.0",
-    "wdio-mocha-framework": "^0.5.8",
-    "wdio-sauce-service": "^0.3.1",
-    "wdio-selenium-standalone-service": "^0.0.7",
-    "webdriverio": "^4.6.1"
+  "bugs": {
+    "url": "https://github.com/amilajack/compat-db/issues"
   },
-  "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-plugin-import": "^2.2.0"
+  "files": [
+    "index.js",
+    "lib"
+  ],
+  "homepage": "https://github.com/amilajack/compat-db#readme",
+  "dependencies": {
+    "babel-runtime": "^6.20.0",
+    "browserslist": "^1.5.2",
+    "requireindex": "^1.1.0"
+  },
+  "peerDependencies": {
+    "eslint": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=4.x",
+    "npm": ">=3.x"
+  },
+  "devEngines": {
+    "node": ">=4.x",
+    "npm": ">=3.x"
   }
 }
