--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "compat-db",
   "version": "0.0.0",
-  "description": "Lint browser compatibility of API used",
+  "description": "A central and scalable browser api compatability database",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amilajack/compat-db.git"
   },
   "scripts": {
-    "test": "wdio index.js",
+    "build": "cross-env NODE_ENV=production rm -rf lib && babel src --out-dir lib",
+    "flow": "flow",
     "lint": "eslint --cache --ignore-path .gitignore --format=node_modules/eslint-formatter-pretty .",
-    "spec": "mocha index.js --timeout 15000"
+    "spec": "mocha index.js --timeout 15000",
+    "test": "npm run lint",
+    "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/api-catalog/apicatalogdata.json",
+    "version": "npm run build"
   },
   "keywords": [
     "api",
@@ -28,12 +32,37 @@
   ],
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "browserslist": "^1.5.2",
-    "requireindex": "^1.1.0"
+    "wdio-mocha-framework": "^0.5.8",
+    "wdio-sauce-service": "^0.3.1",
+    "wdio-selenium-standalone-service": "^0.0.7",
+    "webdriverio": "^4.6.1"
   },
-  "peerDependencies": {
-    "eslint": "^3.0.0"
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "cross-env": "^3.1.4",
+    "download-cli": "^1.0.1",
+    "eslint": "^3.13.0",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-formatter-pretty": "^1.1.0",
+    "eslint-plugin-flowtype": "^2.29.2",
+    "eslint-plugin-flowtype-errors": "^2.0.3",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "flow-bin": "^0.37.4",
+    "flow-typed": "^2.0.0",
+    "jest-cli": "^18.1.0",
+    "tcomb": "^3.2.16"
   },
   "engines": {
     "node": ">=4.x",
