Updated Database and Provider specs, autofixed code style

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,10 +13,8 @@
     "arrow-parens": 0,
     "comma-dangle": [2, "never"],
     "consistent-return": 2,
-    "flowtype/boolean-style": [
-      2,
-      "bool"
-    ],
+    "flowtype/boolean-style": [2, "bool"],
+    "flowtype/semi": [2, "always"],
     "flowtype-errors/show-errors": 2,
     "fp/no-nil": 0,
     "fp/no-mutating-methods": 0,
@@ -27,7 +25,7 @@
     "promise/no-return-wrap": 2,
     "promise/param-names": 2,
     "promise/catch-or-return": 2,
-    "promise/no-native": "off",
+    "promise/no-native": 0,
     "promise/no-nesting": 2,
     "promise/no-promise-in-callback": 2,
     "promise/no-callback-in-promise": 2,
