--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && babel src --out-dir lib",
+    "compat-test": "mocha index.js --timeout 15000",
     "flow": "flow",
     "lint": "eslint --cache --ignore-path .gitignore --format=node_modules/eslint-formatter-pretty .",
-    "spec": "mocha index.js --timeout 15000",
-    "test": "npm run lint",
+    "spec": "jest",
+    "test": "cross-env NODE_ENV=development npm run lint && npm run flow && npm run spec",
     "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/api-catalog/apicatalogdata.json",
     "version": "npm run build"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [
     "api",
@@ -43,6 +47,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-flow-runtime": "^0.0.7",
     "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -50,17 +55,19 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "download-cli": "^1.0.1",
-    "eslint": "^3.13.0",
+    "eslint": "^3.13.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-formatter-pretty": "^1.1.0",
-    "eslint-plugin-flowtype": "^2.29.2",
+    "eslint-plugin-flowtype": "^2.30.0",
     "eslint-plugin-flowtype-errors": "^2.0.3",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "flow-bin": "^0.37.4",
+    "flow-runtime": "^0.1.0",
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
     "tcomb": "^3.2.16"
