Added stricter e2e tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "cross-env NODE_ENV=production rm -rf lib && babel src --out-dir lib",
     "compat-test": "mocha index.js --timeout 15000",
     "flow": "flow",
-    "lint": "eslint --cache --ignore-path .gitignore --format=node_modules/eslint-formatter-pretty .",
+    "flow-typed": "flow-typed install",
+    "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "spec": "jest",
     "test": "cross-env NODE_ENV=development npm run lint && npm run flow && npm run spec",
     "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/api-catalog/apicatalogdata.json",
