--- a/.flowconfig
+++ b/.flowconfig
@@ -10,3 +10,4 @@
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
 esproposal.export_star_as=enable
+suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
