--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "dependencies": {
+    "caniuse-db": "^1.0.30000613",
     "mocha": "^3.2.0",
     "wdio-mocha-framework": "^0.5.8",
     "wdio-sauce-service": "^0.3.1",
@@ -44,31 +45,26 @@
     "webdriverio": "^4.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.0.7",
-    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
+    "babel-plugin-flow-runtime": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.22.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.22.0",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "download-cli": "^1.0.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint": "^3.14.0",
+    "eslint-config-bliss": "0.0.3",
     "eslint-formatter-pretty": "^1.1.0",
-    "eslint-plugin-flowtype": "^2.30.0",
-    "eslint-plugin-flowtype-errors": "^2.0.3",
-    "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "flow-bin": "^0.37.4",
-    "flow-runtime": "^0.1.0",
+    "flow-bin": "^0.38.0",
+    "flow-runtime": "^0.2.1",
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
     "tcomb": "^3.2.16"
