--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && babel src --out-dir lib",
-    "compat-test": "mocha index.js --timeout 15000",
+    "compat-test": "./node_modules/.bin/wdio wdio.conf.js",
     "flow": "flow",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "dependencies": {
     "caniuse-db": "^1.0.30000613",
+    "dotenv": "^4.0.0",
     "mocha": "^3.2.0",
     "wdio-mocha-framework": "^0.5.8",
     "wdio-sauce-service": "^0.3.1",
