--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compat-db",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "A central and scalable browser api compatability database",
   "main": "lib/index.js",
   "repository": {
