--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -2,6 +2,7 @@
   "rules": {
     "fp/no-loops": 0,
     "import/no-extraneous-dependencies": 0,
-    "no-restricted-syntax": 0
+    "no-restricted-syntax": 0,
+    "no-eval": 0
   }
 }
