Initial working commit

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ test_script:
   - yarn test
 
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version x64
   - set CI=true
   - yarn
 
