--- a/package.json
+++ b/package.json
@@ -34,20 +34,8 @@
   "bugs": {
     "url": "https://github.com/amilajack/compat-db/issues"
   },
-  "files": [
-    "index.js",
-    "lib"
-  ],
+  "files": ["databases"],
   "homepage": "https://github.com/amilajack/compat-db#readme",
-  "dependencies": {
-    "caniuse-db": "1.0.30000613",
-    "dotenv": "^4.0.0",
-    "mocha": "^3.2.0",
-    "wdio-mocha-framework": "^0.5.8",
-    "wdio-sauce-service": "^0.3.1",
-    "wdio-selenium-standalone-service": "^0.0.7",
-    "webdriverio": "^4.6.2"
-  },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
@@ -61,8 +49,10 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
+    "caniuse-db": "1.0.30000613",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
+    "dotenv": "^4.0.0",
     "download-cli": "^1.0.1",
     "eslint": "^3.14.1",
     "eslint-config-bliss": "^0.0.6",
@@ -71,8 +61,12 @@
     "flow-runtime": "^0.2.1",
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
+    "mocha": "^3.2.0",
     "nightmare": "^2.9.1",
-    "tcomb": "^3.2.16"
+    "tcomb": "^3.2.16",
+    "wdio-mocha-framework": "^0.5.8",
+    "wdio-sauce-service": "^0.3.1",
+    "webdriverio": "^4.6.2"
   },
   "engines": {
     "node": ">=4.x",
