--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
 environment:
   matrix:
     - nodejs_version: 7
-    - nodejs_version: 6
 
 test_script:
   - node --version
@@ -9,7 +8,7 @@ test_script:
   - yarn test
 
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version x64
   - set CI=true
   - yarn
 
