--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && babel src --out-dir lib",
     "compat-test": "./node_modules/.bin/wdio wdio.conf.js",
-    "flow": "flow",
+    "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "spec": "jest",
@@ -24,27 +24,18 @@
   "keywords": [
     "api",
     "compat",
-    "database"
+    "caniuse",
+    "support",
+    "database",
+    "db"
   ],
   "author": "Amila Welihinda",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/amilajack/compat-db/issues"
   },
-  "files": [
-    "index.js",
-    "lib"
-  ],
+  "files": ["databases"],
   "homepage": "https://github.com/amilajack/compat-db#readme",
-  "dependencies": {
-    "caniuse-db": "^1.0.30000613",
-    "dotenv": "^4.0.0",
-    "mocha": "^3.2.0",
-    "wdio-mocha-framework": "^0.5.8",
-    "wdio-sauce-service": "^0.3.1",
-    "wdio-selenium-standalone-service": "^0.0.7",
-    "webdriverio": "^4.6.1"
-  },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
@@ -58,17 +49,24 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
+    "caniuse-db": "1.0.30000613",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
+    "dotenv": "^4.0.0",
     "download-cli": "^1.0.1",
-    "eslint": "^3.14.0",
-    "eslint-config-bliss": "0.0.3",
+    "eslint": "^3.14.1",
+    "eslint-config-bliss": "^0.0.6",
     "eslint-formatter-pretty": "^1.1.0",
     "flow-bin": "^0.38.0",
     "flow-runtime": "^0.2.1",
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
-    "tcomb": "^3.2.16"
+    "mocha": "^3.2.0",
+    "nightmare": "^2.9.1",
+    "tcomb": "^3.2.16",
+    "wdio-mocha-framework": "^0.5.8",
+    "wdio-sauce-service": "^0.3.1",
+    "webdriverio": "^4.6.2"
   },
   "engines": {
     "node": ">=4.x",
