--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,20 @@ node_js:
 
 cache: yarn
 
-notifications:
-  email: false
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
+install:
+  - export CXX="g++-4.8"
+  - npm install -g yarn
+  - yarn
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start &
+  - sleep 3
