Fixed bug preventing vendor prefixed record removal, tests @ 100% coverage

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ SAUCE_USERNAME=johndoe
 
 # Saucelabs access key example
 SAUCE_ACCESS_KEY=4f5fcd7a-cf01-4333-aa49-a741a9c9ae23
+
+# This determines the index of the compatability test to START at
+# PROVIDERS_INDEX_START=0
+
+# This determines the index of the compatability test to STOP at
+# PROVIDERS_INDEX_END=10
