--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "sequelize": "^3.30.1",
     "sqlite3": "^3.1.8",
     "tcomb": "^3.2.16",
+    "tern-node-express": "^0.4.0",
     "wdio-mocha-framework": "^0.5.8",
     "wdio-sauce-service": "^0.3.1",
     "webdriverio": "^4.6.2"
