Fixed failing test cases, grammar fixes, spec logging config

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,12 @@ SAUCE_USERNAME=johndoe
 # Saucelabs access key example
 SAUCE_ACCESS_KEY=4f5fcd7a-cf01-4333-aa49-a741a9c9ae23
 
-# This determines the index of the compatability test to START at
-# PROVIDERS_INDEX_START=0
+# This determines the index of the compatibility test to START at
+#PROVIDERS_INDEX_START=0
 
-# This determines the index of the compatability test to STOP at
-# PROVIDERS_INDEX_END=10
+# This determines the index of the compatibility test to STOP at
+#PROVIDERS_INDEX_END=10
+
+# Configure if the compat tests should log their results in real time. Disabling
+# this likely increase performance
+#LOG_COMPAT_SPEC_RESULTS=true
