--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
     "build-compat-db": "node -r babel-register compat-tests/setup.js && wdio wdio.conf.js",
-    "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records",
+    "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records && touch tmp-db-records/database.sqlite",
     "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
@@ -54,6 +54,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bookshelf": "^0.10.3",
     "caniuse-db": "1.0.30000613",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
@@ -66,6 +67,7 @@
     "flow-runtime": "^0.2.1",
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
+    "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "nightmare": "^2.9.1",
@@ -82,7 +84,7 @@
     "npm": ">=3.x"
   },
   "devEngines": {
-    "node": ">=4.x",
-    "npm": ">=3.x"
+    "node": ">=6.x",
+    "npm": ">=4.x"
   }
 }
