Added docker mysql support

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,10 @@ SAUCE_ACCESS_KEY=4f5fcd7a-cf01-4333-aa49-a741a9c9ae23
 # Configure if the compat tests should log their results in real time. Disabling
 # this likely increase performance
 #LOG_COMPAT_SPEC_RESULTS=true
+
+# Configure if compat-db should use mysql or sqlite. Will default to sqlite.
+# mysql will offer better performance and concurrency
+#USE_SQLITE=true
+
+# Configure your MYSQL IP address
+#MYSQL_IP_ADDRESS=127.0.0.1
