--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
-    "spec": "npm run dir-remove && touch tmp-db-records/database.sqlite && jest test/*.js",
+    "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
+    "spec": "npm run migrate && touch tmp-db-records/database.sqlite && jest test/*.js",
     "test": "cross-env NODE_ENV=development npm run lint && npm run flow && npm run spec",
     "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/api-catalog/apicatalogdata.json",
     "version": "npm run build-compat-db && npm run build",
@@ -70,6 +71,7 @@
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "mysql": "^2.13.0",
     "nightmare": "^2.9.1",
     "sequelize": "^3.30.1",
     "sqlite3": "^3.1.8",
