Initial concurrent implementation (#19)
* Fixed bug preventing vendor prefixed record removal, tests @ 100% coverage

* Split database into separate json files for better concurrency

* Migrated to sqlite, minor refactoring

* Revised `spec` npm script

* Added better tern.js support

* Revised database schema's primaryKey and allowNull properties

* Increased VM heap size to 2500 MB, added api 'type' field to schema

* Fixed failing test cases, grammar fixes, spec logging config

* Properly increased VM heap memory, added better comments to Compat.spec.js

* Migrated ORM from sequalize to bookshelf

* Changed schema structure to allow for versions within same record

* Added docker mysql support

* Initial addition of JobQueue architecture

* Initial proof-of-concept, runnable JobQueue implementation

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,20 @@ SAUCE_USERNAME=johndoe
 
 # Saucelabs access key example
 SAUCE_ACCESS_KEY=4f5fcd7a-cf01-4333-aa49-a741a9c9ae23
+
+# This determines the index of the compatibility test to START at
+#PROVIDERS_INDEX_START=0
+
+# This determines the index of the compatibility test to STOP at
+#PROVIDERS_INDEX_END=10
+
+# Configure if the compat tests should log their results in real time. Disabling
+# this likely increase performance
+#LOG_COMPAT_SPEC_RESULTS=true
+
+# Configure if compat-db should use mysql or sqlite. Will default to sqlite.
+# mysql will offer better performance and concurrency
+#USE_SQLITE=true
+
+# Configure your MYSQL IP address
+#MYSQL_IP_ADDRESS=127.0.0.1
