--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "compat-db",
   "version": "0.0.1-0",
-  "description": "A central and scalable browser api compatability database",
+  "description": "A central and scalable browser api compatibility database",
   "main": "lib/src/index.js",
   "repository": {
     "type": "git",
@@ -9,16 +9,16 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
-    "build-compat-db": "rm -rf lib && mkdir lib && node -r babel-register compat-tests/index.js && wdio wdio.conf.js",
+    "build-compat-db": "node -r babel-register compat-tests/setup.js && wdio wdio.conf.js",
+    "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records && touch tmp-db-records/database.sqlite",
     "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
-    "spec": "jest test/*.js",
-    "test": "cross-env NODE_ENV=development npm run lint && npm run flow && npm run spec",
+    "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
+    "spec": "npm run dir-remove && jest test/*.js",
+    "test": "cross-env NODE_ENV=development npm run lint && npm run spec",
     "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/api-catalog/apicatalogdata.json",
-    "version": "npm run build-compat-db && npm run build",
-    "view-compat-db": "cat ./lib/all.json | jq",
-    "view-test-compat-db": "cat ./compat-db.json | jq"
+    "version": "npm run build-compat-db && npm run build"
   },
   "jest": {
     "testEnvironment": "node"
@@ -36,14 +36,16 @@
   "bugs": {
     "url": "https://github.com/amilajack/compat-db/issues"
   },
-  "files": ["databases"],
+  "files": [
+    "databases"
+  ],
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.2.1",
+    "babel-plugin-flow-runtime": "^0.3.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.22.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -51,21 +53,28 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
-    "caniuse-db": "1.0.30000613",
+    "bookshelf": "^0.10.3",
+    "caniuse-db": "1.0.30000622",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "dotenv": "^4.0.0",
     "download-cli": "^1.0.1",
-    "eslint": "^3.14.1",
+    "eslint": "^3.15.0",
     "eslint-config-bliss": "^0.0.6",
     "eslint-formatter-pretty": "^1.1.0",
-    "flow-bin": "^0.38.0",
-    "flow-runtime": "^0.2.1",
+    "flow-bin": "^0.39.0",
+    "flow-runtime": "^0.3.0",
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
+    "knex": "^0.12.6",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "mysql": "^2.13.0",
     "nightmare": "^2.9.1",
+    "sequelize": "^3.30.2",
+    "sqlite3": "^3.1.8",
     "tcomb": "^3.2.16",
+    "tern-node-express": "^0.4.0",
     "wdio-mocha-framework": "^0.5.8",
     "wdio-sauce-service": "^0.3.1",
     "webdriverio": "^4.6.2"
@@ -75,7 +84,7 @@
     "npm": ">=3.x"
   },
   "devEngines": {
-    "node": ">=4.x",
-    "npm": ">=3.x"
+    "node": ">=6.x",
+    "npm": ">=4.x"
   }
 }
