Initial proof-of-concept version

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
-    "build-compat-db": "node -r babel-register compat-tests/setup.js && wdio wdio.conf.js",
+    "build-compat-db-webdriverio": "node -r babel-register compat-tests-webdriver/setup.js && wdio wdio.conf.js",
+    "build-compat-db": "node -r babel-register compat-tests/setup.js && node -r babel-register compat-tests/Compat.spec.js",
     "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records && touch tmp-db-records/database.sqlite",
     "flow": "flow check",
     "flow-typed": "flow-typed install",
@@ -41,20 +42,28 @@
   ],
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
+    "babel-cli": "^6.23.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-flow-runtime": "^0.3.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.22.0",
+    "babel-plugin-transform-async-generator-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "babel-register": "^6.23.0",
     "bookshelf": "^0.10.3",
-    "caniuse-db": "1.0.30000622",
+    "caniuse-db": "1.0.30000623",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "dotenv": "^4.0.0",
@@ -71,6 +80,7 @@
     "mocha": "^3.2.0",
     "mysql": "^2.13.0",
     "nightmare": "^2.9.1",
+    "selenium-webdriver": "^3.0.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
     "tcomb": "^3.2.16",
