--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
     "build-compat-db-webdriverio": "node -r babel-register compat-tests-webdriver/setup.js && wdio wdio.conf.js",
-    "build-compat-db": "node -r babel-register compat-tests/setup.js && node -r babel-register compat-tests/Compat.spec.js",
+    "build-compat-db": "node -r babel-register compat-tests/setup.js && node -r babel-register compat-tests/Compat.js",
     "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records && touch tmp-db-records/database.sqlite",
     "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
-    "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
+    "migrate": "npm run dir-remove && npm run migrate && babel-node ./src/database/Migrate",
     "spec": "npm run dir-remove && jest test/*.js",
     "test": "cross-env NODE_ENV=development npm run lint && npm run spec",
     "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/api-catalog/apicatalogdata.json",
@@ -47,20 +47,12 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-flow-runtime": "^0.3.0",
-    "babel-plugin-transform-async-generator-functions": "^6.22.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-es2017": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-preset-stage-1": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-preset-stage-3": "^6.22.0",
     "babel-register": "^6.23.0",
     "bookshelf": "^0.10.3",
     "caniuse-db": "1.0.30000623",
@@ -76,18 +68,12 @@
     "flow-typed": "^2.0.0",
     "jest-cli": "^18.1.0",
     "knex": "^0.12.6",
-    "lodash": "^4.17.4",
-    "mocha": "^3.2.0",
     "mysql": "^2.13.0",
     "nightmare": "^2.9.1",
     "selenium-webdriver": "^3.0.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
-    "tcomb": "^3.2.16",
-    "tern-node-express": "^0.4.0",
-    "wdio-mocha-framework": "^0.5.8",
-    "wdio-sauce-service": "^0.3.1",
-    "webdriverio": "^4.6.2"
+    "tcomb": "^3.2.16"
   },
   "engines": {
     "node": ">=4.x",
