Updated browser version ranges for chrome & firefox

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,16 @@ SAUCE_USERNAME=johndoe
 # Saucelabs access key example
 SAUCE_ACCESS_KEY=4f5fcd7a-cf01-4333-aa49-a741a9c9ae23
 
-# This determines the index of the compatibility test to START at
+# The indexs of the range of the records you want to process for
+# creating new jobs. If there are no jobs in the database and
+# the end index is set to 10, only 10 records will be used to make
+# jobs
 #PROVIDERS_INDEX_START=0
-
-# This determines the index of the compatibility test to STOP at
 #PROVIDERS_INDEX_END=10
+
+# The indexs of the range of the jobs you want to process
+#JOBS_INDEX_START=0
+#JOBS_INDEX_END=10
 
 # Configure if the compat tests should log their results in real time. Disabling
 # this likely increase performance
