--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "spec": "cross-env NODE_ENV=test npm run dir-remove && npm run migrate && jest",
     "test": "cross-env NODE_ENV=development npm run lint && npm run spec",
     "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
+    "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
     "version": "npm run build-compat-db && npm run build"
   },
   "jest": {
