--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
     "build-compat-db": "node -r babel-register compat-tests/setup.js && node -r babel-register compat-tests/Compat.js",
-    "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records && touch tmp-db-records/database.sqlite",
+    "dir-remove": "rm -rf tmp-records && mkdir tmp-records && touch tmp-records/database.sqlite",
     "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
@@ -47,7 +47,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.6.0",
+    "babel-plugin-flow-runtime": "^0.6.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -56,7 +56,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.23.0",
     "bookshelf": "^0.10.3",
-    "caniuse-db": "1.0.30000628",
+    "caniuse-db": "1.0.30000631",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "dotenv": "^4.0.0",
@@ -65,7 +65,7 @@
     "eslint-config-bliss": "^0.0.7",
     "eslint-formatter-pretty": "^1.1.0",
     "flow-bin": "^0.40.0",
-    "flow-runtime": "^0.6.0",
+    "flow-runtime": "^0.6.1",
     "flow-typed": "^2.0.0",
     "jest-cli": "^19.0.2",
     "knex": "^0.12.7",
@@ -75,7 +75,7 @@
     "selenium-webdriver": "^3.1.0",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
-    "tcomb": "^3.2.17",
+    "tcomb": "^3.2.18",
     "wdio-mocha-framework": "^0.5.8",
     "wdio-sauce-service": "^0.3.1",
     "wdio-selenium-standalone-service": "^0.0.8",
