--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "import/no-extraneous-dependencies": 0,
     "no-let": 0,
     "no-plusplus": 0,
+    "no-console": 0,
     "flowtype-errors/show-errors": 0
   }
 }
