--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
     "spec": "cross-env NODE_ENV=test npm run dir-remove && npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
-    "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
+    "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
     "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
     "version": "npm run build-compat-db && npm run build",
     "wdio": "wdio wdio.conf.js"
@@ -55,6 +55,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.23.0",
+    "bluebird": "^3.5.0",
     "bookshelf": "^0.10.3",
     "caniuse-db": "1.0.30000632",
     "chai": "^3.5.0",
