--- a/.gitignore
+++ b/.gitignore
@@ -32,12 +32,11 @@ node_modules
 .idea
 .eslintcache
 
-lib
 compat-db.json
 .env
 errorShots
-tmp-db-records
 capabilities.json
 compat-tests-webdriver/jobs.json
 compat-tests/test-results
 compat-tests/tests
+src/database/database.sqlite
