--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
     "build-compat-db": "node -r babel-register compat-tests/setup.js && node -r babel-register compat-tests/Compat.js",
-    "dir-remove": "rm -rf tmp-db-records && mkdir tmp-db-records && touch tmp-db-records/database.sqlite",
+    "dir-remove": "rm src/database/database.sqlite || true && touch src/database/database.sqlite",
     "flow": "flow check",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
     "spec": "cross-env NODE_ENV=test npm run dir-remove && npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
-    "update-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
+    "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
     "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
     "version": "npm run build-compat-db && npm run build",
     "wdio": "wdio wdio.conf.js"
@@ -47,7 +47,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.6.0",
+    "babel-plugin-flow-runtime": "^0.7.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -55,17 +55,18 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.23.0",
+    "bluebird": "^3.5.0",
     "bookshelf": "^0.10.3",
-    "caniuse-db": "1.0.30000628",
+    "caniuse-db": "1.0.30000632",
     "chai": "^3.5.0",
-    "cross-env": "^3.1.4",
+    "cross-env": "^3.2.3",
     "dotenv": "^4.0.0",
     "download-cli": "^1.0.1",
-    "eslint": "^3.16.1",
+    "eslint": "^3.17.0",
     "eslint-config-bliss": "^0.0.7",
     "eslint-formatter-pretty": "^1.1.0",
-    "flow-bin": "^0.40.0",
-    "flow-runtime": "^0.6.0",
+    "flow-bin": "^0.41.0",
+    "flow-runtime": "^0.7.0",
     "flow-typed": "^2.0.0",
     "jest-cli": "^19.0.2",
     "knex": "^0.12.7",
@@ -75,7 +76,7 @@
     "selenium-webdriver": "^3.1.0",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
-    "tcomb": "^3.2.17",
+    "tcomb": "^3.2.18",
     "wdio-mocha-framework": "^0.5.8",
     "wdio-sauce-service": "^0.3.1",
     "wdio-selenium-standalone-service": "^0.0.8",
