--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": [
+    "es2015",
+    "stage-0"
+  ],
   "plugins": [
     "syntax-flow",
     /*["flow-runtime", {
