--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "bliss",
   "rules": {
     "consistent-return": 0,
+    "prettier/prettier": 0,
     "fp/no-mutation": 0,
     "fp/no-throw": 0,
     "import/no-extraneous-dependencies": 0,
