Fixed mysql db name causing syntax error

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 
 before_install:
-  - mysql -e 'CREATE DATABASE compat-db;'
+  - mysql -e 'CREATE DATABASE compat_db;'
 
 before_script:
   - export DISPLAY=:99.0
@@ -33,7 +33,7 @@ services:
 
 test:
   adapter: mysql2
-  database: compat-db
+  database: compat_db
   username: username
   password: secret
   encoding: utf8
