--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
-    "view-compat-db": "http-server site",
+    "run-to-completion": "babel-node compat-tests/RunToCompletion",
     "spec": "cross-env NODE_ENV=test npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
     "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
     "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
+    "view-compat-db": "http-server site",
     "version": "npm run build-compat-db && npm run build",
     "wdio": "wdio wdio.conf.js"
   },
@@ -46,34 +47,37 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.9.1",
+    "babel-plugin-flow-runtime": "^0.10.0",
+    "babel-plugin-transform-async-to-bluebird": "^1.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.2.1",
+    "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
     "bluebird": "^3.5.0",
     "bookshelf": "^0.10.3",
-    "caniuse-db": "1.0.30000634",
+    "caniuse-db": "1.0.30000636",
     "chai": "^3.5.0",
-    "cross-env": "^3.2.3",
+    "chromedriver": "^2.28.0",
+    "cross-env": "^3.2.4",
     "dotenv": "^4.0.0",
     "download-cli": "^1.0.1",
-    "eslint": "^3.17.1",
+    "eslint": "^3.18.0",
     "eslint-config-bliss": "^1.0.2",
     "eslint-formatter-pretty": "^1.1.0",
-    "flow-bin": "^0.41.0",
-    "flow-runtime": "^0.9.1",
+    "flow-bin": "^0.42.0",
+    "flow-runtime": "^0.10.0",
     "flow-typed": "^2.0.0",
     "http-server": "^0.9.0",
     "jest-cli": "^19.0.2",
-    "knex": "^0.12.7",
+    "knex": "^0.12.8",
     "mocha": "^3.2.0",
     "mysql": "^2.13.0",
     "nightmare": "^2.10.0",
@@ -92,8 +96,5 @@
   "devEngines": {
     "node": ">=6.x",
     "npm": ">=4.x"
-  },
-  "dependencies": {
-    "chromedriver": "^2.28.0"
   }
 }
