--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,12 +1,5 @@
 {
-  "rules": {
-    "fp/no-loops": 0,
-    "import/no-extraneous-dependencies": 0,
-    "no-restricted-syntax": 0,
-    "no-eval": 0
-  },
   "env": {
-    "jest": true,
-    "jasmine": true
+    "jest": true
   }
 }
