--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "flow": "glow",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache .",
-    "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
+    "migrate": "yarn dir-remove && babel-node ./src/database/Migrate",
     "view-compat-db": "http-server site",
-    "spec": "cross-env NODE_ENV=test npm run migrate && jest",
-    "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
+    "spec": "cross-env NODE_ENV=test yarn migrate && jest --runInBand --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test yarn lint && yarn spec",
     "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
     "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
-    "version": "npm run build-compat-db && npm run build",
+    "version": "yarn build-compat-db && yarn build",
     "wdio": "wdio wdio.conf.js"
   },
   "jest": {
@@ -76,8 +76,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-flow-runtime": "^0.18.0",
-    "bluebird": "^3.5.3",
-    "bookshelf": "^0.14.2",
+    "bookshelf": "0.14.2",
     "caniuse-db": "1.0.30000940",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
@@ -92,7 +91,7 @@
     "glow": "^1.2.2",
     "http-server": "^0.11.1",
     "jest-cli": "^24.1.0",
-    "knex": "^0.16.3",
+    "knex": "0.16.3",
     "mocha": "^6.0.2",
     "mysql": "^2.16.0",
     "nightmare": "^3.0.1",
